# chip

./: .gitignore  Discussion.cabal  LICENSE  cabal.sandbox.config  discussion.cabal
app/: Main.hs
src/: Discussion.hs  Token.hs
src/Discussion/: Bool.hs  Context.hs  Converter.hs  Data.hs  Eval.hs  Focus.hs  Lexer.hs  Parser.hs  Term.hs  Token.hs
test/: UnitBool.hs  UnitContext.hs  UnitConverter.hs  UnitFocus.hs  UnitParser.hs  hunit.hs
