name:                discussion
version:             0.0.1.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Mitsui
maintainer:          todays.mitsui@gmail.com
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Discussion
                     , Discussion.Data
                     , Discussion.Bool
                     , Discussion.Lexer
                     , Discussion.Parser
  build-depends:       base >=4.7 && <4.8
                     , parsec3
  default-language:    Haskell2010

executable discussion
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, FlexibleContexts
  build-depends:       base >=4.7 && <4.8
                     , discussion
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite UnitTest
  type:                exitcode-stdio-1.0
  main-is:             hunit.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , test-framework
                     , test-framework-th
                     , test-framework-hunit
                     , HUnit
                     , parsec3
                     , discussion

test-suite UnitBool
  type:                exitcode-stdio-1.0
  main-is:             UnitBool.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , test-framework
                     , test-framework-th
                     , test-framework-hunit
                     , HUnit
                     , discussion
