name:                discussion
version:             0.0.1.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Mitsui
maintainer:          todays.mitsui@gmail.com
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Discussion
                     , Discussion.Data
                     , Discussion.Context
                     , Discussion.Focus
                     , Discussion.Bool
                     , Discussion.Lexer
                     , Discussion.Parser
                     , Discussion.Converter
  build-depends:       base >=4.7 && <4.8
                     , parsec3
                     , containers
  default-language:    Haskell2010

executable discussion
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, FlexibleContexts
  build-depends:       base >=4.7 && <4.8
                     , discussion
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite UnitParser
  type:                exitcode-stdio-1.0
  main-is:             UnitParser.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , test-framework
                     , test-framework-th
                     , test-framework-hunit
                     , HUnit
                     , parsec3
                     , discussion

test-suite UnitBool
  type:                exitcode-stdio-1.0
  main-is:             UnitBool.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , test-framework
                     , test-framework-th
                     , test-framework-hunit
                     , HUnit
                     , discussion

test-suite UnitConverter
  type:                exitcode-stdio-1.0
  main-is:             UnitConverter.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , test-framework
                     , test-framework-th
                     , test-framework-hunit
                     , HUnit
                     , discussion

test-suite UnitContext
  type:                exitcode-stdio-1.0
  main-is:             UnitContext.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , test-framework
                     , test-framework-th
                     , test-framework-hunit
                     , HUnit
                     , discussion

test-suite UnitFocus
  type:                exitcode-stdio-1.0
  main-is:             UnitFocus.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
                     , test-framework
                     , test-framework-th
                     , test-framework-hunit
                     , HUnit
                     , discussion
